# mini_dsl_gurobi_cpp

./: API_REFERENCE.md  CMakeLists.txt  LICENSE  README.md  Tutorial.md  build.sh
docs/: ADVANCED.md  API_REFERENCE.md  EXAMPLES.md  GETTING_STARTED.md
examples/: AdvancedExample.cpp  BasicExample.cpp  CMakeLists.txt  basic_usage.cpp
include/: Comprehension.h  Config.h  ConstraintBuilderExtras.h  ConstraintHelpers.h  ConstraintNameND.h  Expr.h  ForallN.h  IndexSets.h  ModelBuilderGeneric.h  RunOptions.h  SumOver.h  VarMacro.h  VariableFactory.h  VariableGroup.h  VariableTable.h  dsl_macros.h
src/core/: ConstraintBuilders.h  VariableFactory.h  VariableGroup.h  VariableTable.h
src/indexing/: Indexing.h  Naming.h  dsl_macros.h
src/modeling/: ModelBuilder.h  RunOptions.h
